test/acceptance/validating/failing/click-without-string-arg-without-find.spun
get "http://google.com"

click
